# the-intercept-2025

firmware/: .gitignore  CMakeLists.txt  README.md  aes.S  bootloader_config.h  build.sh  chain.h  config.c  config.h  enc_bootloader.c  main.c  menu.c  menu.h  mining.c  mining.h  otp.json  otp_helpers.c  otp_helpers.h  tiny_md5.c  tiny_md5.h
firmware/keys/: private.pem  public.pem
firmware/scripts/: enable_secure_boot.sh  generate_aes_key.sh  generate_keys.sh  lock.sh  write_otp_secret.sh
hardware/: .gitignore  fp-info-cache  fp-lib-table  rp2350.kicad_pcb  rp2350.kicad_prl  rp2350.kicad_pro  rp2350.kicad_sch  sym-lib-table  the-intercept-2025.kicad_sym
hardware/gerbers/: rp2350-B_Cu.gbr  rp2350-B_Mask.gbr  rp2350-B_Paste.gbr  rp2350-B_Silkscreen.gbr  rp2350-Edge_Cuts.gbr  rp2350-F_Cu.gbr  rp2350-F_Mask.gbr  rp2350-F_Paste.gbr  rp2350-F_Silkscreen.gbr  rp2350-NPTH.drl  rp2350-PTH.drl  rp2350-job.gbrjob
hardware/the-intercept-2025.pretty/: AOTA-B201610S3R3-101-T.kicad_mod  SAMTEC_FTSH-105-X-X-DV-007-P-X.kicad_mod
pico-sdk-patch/: README.md  stdio_usb_descriptors.c
solutions/: .rugcoin.py.un~  rugcoin.py  rugcoin.py~
